## [x.x] - yyyy-mm-dd
### Fixed
- Fixed the mixed content warning for the Google Fonts API calls.
- Fixed the banner responsive JS on single posts
- Fixed the Isotope filtering using the Packery Library
- Changed the names of the Google Font Classes
- Stoped the page banner from showing on the Homepage if the Reading settings are set to show a static page. 
- Fixed the banner class for the body tag, no longer show up on all pages.
- Fixed the header layout customiser js, and moved it into the "Layouts" Panel
- Changed the content_width for the single 'jetpack-portfolio' post type to 1140px
- Fixed the blog images not triggering on jetpack infinite scroll loading
### Updated
- Isotope jQuery Library 2.1.1
- Set the Jetpack Portfolio post type archive to only call portfolio items that have a featured image set. i.e. Complete
### Added
- Packery jQuery Library 1.1.1
- WordPress Customizer options for controlling the layout of the header
- Added in a filter 'lsx_allowed_post_type_banners' so child themes can add banner support for additional post types.


## [1.1] - 2015-02-19
### Changed
-
### Fixed
- 

## [1.0.9] - 2015-02-18
### Changed
- 
### Fixed
- 

## [1.0.8] - 2015-02-10
### Changed
- 
### Fixed
- 

## [1.0.7] - 2015-02-02
### Changed
- 
### Fixed
- 

## [1.0.6] - 2015-01-16
### Changed
- 
### Fixed
- 

## [1.0.4] - 2014-12-05
### Changed
- 
### Fixed
- 

## [0.1] - 2014-08-04
### Changed
- 
### Fixed
- 