@@ -16,6 +16,7 @@
 - Packery jQuery Library 1.1.1
 - WordPress Customizer options for controlling the layout of the header
 - Added in a filter 'lsx_allowed_post_type_banners' so child themes can add banner support for additional post types.
+- Added in a filter 'lsx_post_navigation_labels' which allows you to edit the labels outputted on the post type archive.
 
 
 ## [1.1] - 2015-02-19
